--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Profil
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,22 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Profil</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-card>
+      <img alt="waz" src="assets/img/waz.jpg" />
+      <ion-card-header>
+        <ion-card-title>Fawwaz Afkar Muzakky</ion-card-title>
+        <ion-card-subtitle>H1D022067</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        <p>I'm a 3rd year student at Informatics</p>
+        <ion-chip color="dark">Jenderal Soedirman University</ion-chip>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
